# sovereign-self-fixer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  sovereign-self-fixer-tree.md  vault.sh
.github/workflows/: ci.yml  release.yml
selffixerai/: __init__.py  __main__.py  main.py  notifications.py
selffixerai/analysis/: __init__.py  deep_scanner.py
selffixerai/core/: __init__.py  backup_manager.py  immutable_log.py  orchestrator.py  policy.py  self_fixer.py
selffixerai/crypto/: __init__.py  profiles.py
selffixerai/memory/: __init__.py  rag_pipeline.py  repmhl.py
selffixerai/security/: __init__.py  encryption.py  tamper_lock.py  tpm.py
skills/: __init__.py
skills/voice_conductor/: __init__.py  voice_conductor.py
tests/: test_self_fixer.py
