[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "sovereign-self-fixer"
version = "0.3.0"
description = "Sovereign Self-Fixer — ghost/hybrid/online modes with sovereign crypto and immutable audit logging"
authors = [{ name = "Derek Appel", email = "appel420@x.ai" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
pqc = ["oqs-python>=0.10.0"]
dev = [
    "build",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["selffixerai", "skills"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
